# fitmatch

./: .env.example  .gitignore  .replit  ANALYSE_SITE.md  ANALYSE_SITE_A_Z.md  APRES_LES_CLES.md  ARCHITECTURE.md  AUDIT_COMPLET_2026.md  AUDIT_COMPLET_2026_FINAL.md  AUDIT_COMPLET_FINAL.md  AUDIT_COMPLET_FITMATCH.md  AUDIT_COMPLET_FITMATCH_2025.md  AUDIT_REPORT.md  CE_QUI_MANQUE.md  CHANGELOG.md  CHECKLIST_AVANT_MISE_EN_LIGNE.md  COMMENT_LANCER_LE_SITE.md  CONTRIBUTING.md  CORRECTIONS_AUDIT_APPLIQUEES.md  DEPLOIEMENT.md  DEPLOIEMENT_24H.md  DEPLOY_RENDER_5_STEPS.md  FITMATCH_PROD_FITMATCH_FR.md  GOOGLE_MAPS_DOMAINE.md  RAPPORT_VERIFICATION.md  README.md  RENDER_ENV.md  RENDER_WHY_NO_CHANGES.md  SEND_ME_THIS.md  STRIPE_CHECKLIST.md  SUPABASE_CREATE_TABLE.md  TEST_ANAS_SEARCH.md  VERIF_CLES.md  VERIF_COMPLETE.md  auth_utils.py  check_env.py  config.py  cookies.txt  db_pool.py  db_service.py  (+34 more)
api/: __init__.py  cron.py  index.py  main.py  reminders_process.py
attached_assets/: Pasted--BACKEND-Code-Python-FastAPI-Flask-Ce-code-envoie-l-email-au-client-import-requests-fro-1764359887840_1764359887841.txt  Pasted--DIALOG-CRAN-DE-V-RIFICATION-PAR-E-MAIL-div-id-email-verify-overla-1762030207749_1762030207750.txt  Pasted--DOCTYPE-html-html-lang-fr-head-meta-charset-UTF-8-title-Annulation-de-RDV-title--1764358978019_1764358978020.txt  Pasted--DOCTYPE-html-html-lang-fr-head-meta-charset-UTF-8-title-Identification-Fitmatc-1764534187220_1764534187220.txt  Pasted--DOCTYPE-html-html-lang-fr-head-meta-charset-UTF-8-title-R-initialiser-mon-mot-de-1764534965609_1764534965609.txt  Pasted--div-class-login-container-h2-Se-connecter-h2-form-acti_1764789876603.txt  (+36 more)
(+111 files in other folders)
