[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
    "geopy>=2.4.1",
    "jinja2>=3.1.6",
    "pillow>=11.3.0",
    "pydantic>=2.11.9",
    "pyjwt>=2.10.1",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
    "resend>=2.19.0",
    "sendgrid>=6.12.4",
    "supabase>=2.18.1",
    "uvicorn>=0.35.0",
]
